--- a/Assignment 3 CSS/Part 3/style (1).css
+++ b/Assignment 3 CSS/Part 3/style (1).css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+body {   /* general arrangement of the body */
   margin: 0 auto;
   min-width: 1000px;
   max-width: 1400px;
@@ -12,36 +12,36 @@ body {
   line-height: 1.5;
 }
 
-h1{
+h1{   /* proper positioning of the headings */
   font-size: 2rem;
   text-align: center;
   padding: 1rem 0 ;
   border-bottom: 2px solid #ddd;
 }
 
-h2{
+h2{   /* properly arranging it */
   font-size: 5rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
 
-h3{
+h3{   /* h3 formatting  */
   font-size: 1.3rem;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
 }
 
-p{
+p{   /* proper formatting of the paragraph and arrangements */
   font-size: 1.1rem;
   line-height: 1.5;
   margin-bottom: 1rem;
 }
 
-ul{
+ul{    /* list is in square */
   list-style: square;
 }
 
-nav>ul{
+nav>ul{   /* navigation of the list and all */
   list-style: none;
 }
 
